<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">android.stm32.uart.cmd</string>
    <string name="about_msg">
Serial Port API sample v1.1\n
\n
This program is the sample application provided with project android-serialport-api.\n
\n
More information and bug report on [http://code.google.com/p/android-serialport-api]\n
\n
Copyright 2010-2011 Cedric Priscal\n
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n
\n
http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n
	</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>

    <string name="command_init">init</string>
    <string name="command_init_state">not init.</string>
    <string name="command_get_id_state">chip id:</string>
    <string name="command_get_bootloader_version_state">bootloader version:</string>
    <string name="command_get">supported commands:</string>
    <string name="command_write_image">write image</string>
    <string name="info">info</string>
</resources>