<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/btn_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/command_init">
        </Button>
        <TextView
            android:id="@+id/text_init"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/command_init_state">
        </TextView>

    </LinearLayout>
    <TextView
        android:id="@+id/text_chip_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/command_get_id_state">
    </TextView>
    <TextView
        android:id="@+id/text_bootloader_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/command_get_bootloader_version_state">
    </TextView>
    <TextView
        android:id="@+id/text_get"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/command_get"
        android:scrollbars="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"        >
    </TextView>
    <Button
        android:id="@+id/btn_write_img"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/command_write_image">
    </Button>
    <TextView
        android:id="@+id/text_info"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/info">
    </TextView>
</LinearLayout>